Remove remaining Application bits
This deletes the Application CRD. It leaves behind a single
DefaultNamespace property in the go module, as I haven't built a place
to put it.

This deletes all endpoints related to applications in the proto
file. It leaves behind the ones related to github/gitlab auth as
some of them are used directly by enterprise (I'll go back for another
look at what they're using later, but I left all of them for
now). This also leaves the AutomationKind enum, since it's currently
used by v2 and it's being migrated away from so I'm just not gonna
create conflicts.

This also removes 2 app services and most of the kube adapter.
